# QbitAppTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
QbitApp/: CMakeLists.txt  imgui.ini
QbitApp/src/: QbitApp.cpp  QbitAppLayer.cpp  QbitAppLayer.h
Scripts/: Build.bat  Build.sh  Run.bat  Run.sh  Setup.bat  Setup.sh
